--- a/produit.html
+++ b/produit.html
@@ -32,7 +32,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
   <img src="maillotrennesdomicile.JPG" />
   <p><a href="https://arthurseche.github.io/eleve8/confirmation.html" > Achetez ce produit </a> <p>
-    <p><a href="https://arthurseche.github.io/eleve8/hello.html" onclick="dataLayer.push({'event': 'clic_produit_hp'});> homepage </a> <p> 
+    <p><a href="https://arthurseche.github.io/eleve8/hello.html" onclick="dataLayer.push({'event': 'clic_produit_hp'});"> homepage </a> <p> 
                                                      
   </div>
   <div class="footer">
