--- a/hello.html
+++ b/hello.html
@@ -42,7 +42,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <a  href="https://arthurseche.github.io/eleve8/contact.html" class="contact1"> contact </a> <br>
     <a href="https://arthurseche.github.io/eleve8/produit.html" onclick="dataLayer.push({'event': 'clic_produit'});"> produit </a></p>
     <p><a href="https://arthurseche.github.io/eleve8/exercice2.html"> exercice 2 </a> <br>
- 
+    <p><a href="https://arthurseche.github.io/eleve8/examen.html"> examen </a> <br>
 
   <p> Bon courage! </p>                                                       
   </div>
