--- a/examen.html
+++ b/examen.html
@@ -48,7 +48,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </p>
 
 <p>
-  <a href="https://arthurseche.github.io/eleve8/hello.html" id="link-datalayer">Lien avec dataLayer.push</a>
+  <a href="https://arthurseche.github.io/eleve8/hello.html" id="link-datalayer" onclick="dataLayer.push({'event': 'clic_exam_hp3'});">Lien avec dataLayer.push</a>
 </p>
 
 <p>
