--- a/examen.html
+++ b/examen.html
@@ -44,7 +44,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </p>
 
 <p>
-  <a class="track-link" href="https://arthurseche.github.io/eleve8/hello.html" class="clic_exam_hp2">Lien avec classe</a>
+  <a class="track-link" href="https://arthurseche.github.io/eleve8/hello.html">Lien avec classe</a>
 </p>
 
 <p>
