--- a/examen.html
+++ b/examen.html
@@ -13,11 +13,11 @@ window.dataLayer.push({
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WN2GDX75');</script>
+})(window,document,'script','dataLayer','GTM-54H34889');</script>
 <!-- End Google Tag Manager -->
   <meta charset="utf-8">
-  <title>Examen difficile </title>
-  <meta name="description" content="Ceci est la page d'examen">
+  <title>Exercice 1</title>
+  <meta name="description" content="Ceci est la page d'exercices"> 
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
  
