--- a/produit.html
+++ b/produit.html
@@ -1,20 +1,7 @@
 <!doctype html>
 <html lang="fr">
 <head>
-<script>
-window.dataLayer = window.dataLayer || [];
-window.dataLayer.push({
-  'event': 'pageType',
-  'pageCategory': 'produit',       // ex : product, blog, category, homepage
-});
-</script>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-54H34889');</script>
-<!-- End Google Tag Manager -->
+
   <meta charset="utf-8">
   <title>Page produit</title>
   <meta name="description" content="Ceci est la page produit"> 
@@ -22,10 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="script.js"></script>
 </head>
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54H34889"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
   <div class="container">
     <div class="main">
       <div class="header">
@@ -39,7 +23,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
   <img src="maillotrennesdomicile.JPG" />
   <p><a href="https://arthurseche.github.io/eleve8/confirmation.html" > Achetez ce produit </a> <p>
-    <p><a href="https://arthurseche.github.io/eleve8/hello.html" onclick="dataLayer.push({'event': 'clic_produit_hp'});"> homepage </a> <p> 
+    <p><a href="https://arthurseche.github.io/eleve8/hello.html" > homepage </a> <p> 
                                                      
   </div>
   <div class="footer">
