--- a/hello.html
+++ b/hello.html
@@ -31,7 +31,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p> Tu trouveras ci-dessous la liste vers les différentes pages du site :</p> 
     
   <p><a href="https://arthurseche.github.io/eleve8/exercice1.html">exercice 1</a> <br>
-    <class = cavamarcher>
+    <class = "cavamarcher">
   <a  href="https://arthurseche.github.io/eleve8/contact.html" > contact </a> <br>
     </class>
     <a href="https://arthurseche.github.io/eleve8/produit.html" > produit </a></p>
