--- a/exercice1.html
+++ b/exercice1.html
@@ -28,7 +28,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
   <p> Tracker le premier lien et uniquement le premier lien</p> 
     
-  <p><a href="https://arthurseche.github.io/eleve8/hello.html">homepage1</a> <br>
+  <p><a href="https://arthurseche.github.io/eleve8/hello.html" onclick="dataLayer.push({'event': 'clichomepage1'});">homepage1</a> <br>
     <a  href="https://arthurseche.github.io/eleve8/hello.html" >homepage2</a> </p>
  <a href="https://arthurseche.github.io/eleve1/hello.html">Homepagedatalayer </a>
 
