--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
   window.dataLayer = window.dataLayer || [];
   window.dataLayer.push({
     'event': 'page_category',
-    'pagecategory': 'hello'
+    'pagecategory': 'homepage'
   });
 </script>
   
