--- a/exercice2.html
+++ b/exercice2.html
@@ -2,21 +2,6 @@
 <html lang="fr">
 <head>
 
-<script>
-  window.dataLayer = window.dataLayer || [];
-  window.dataLayer.push({
-    'event': 'page_category',
-    'pagecategory': 'exercice2'
-  });
-</script>
-  
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-M6PPQT44');</script>
-<!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title>Exercice 2</title>
   <meta name="description" content="Ceci est la page d'exercices">
@@ -24,10 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="script.js"></script>
 </head>
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M6PPQT44"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
   <div class="container">
     <div class="main">
       <div class="header">
@@ -38,8 +20,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <h1> Exercice 2 <h1>
 <p> Tracker les liens suivant en utilisant les trois méthodes suivantes : variables / class / datalayer.push </p>
 <p><a href="https://arthurseche.github.io/eleve8/hello.html"> lien 1</a> <br>
-    <a  href="https://arthurseche.github.io/eleve8/hello.html" class="camarche" > lien 2</a><br> 
-    <p> <a href="https://arthurseche.github.io/eleve8/hello.html" onclick="dataLayer.push({'event': 'lien3'});"> lien 3 </a></p>
+    <a  href="https://arthurseche.github.io/eleve8/hello.html" > lien 2</a><br> 
+    <p> <a href="https://arthurseche.github.io/eleve8/hello.html"> lien 3 </a></p>
   </p>
 <h1> Exercice 3 <h1>
 <p> Installer sur le site le pixel facebook présenté ci-dessous : </p>
