--- a/hello.html
+++ b/hello.html
@@ -2,21 +2,6 @@
 <html lang="fr">
 <head>
 
-<script>
-  window.dataLayer = window.dataLayer || [];
-  window.dataLayer.push({
-    'event': 'page_category',
-    'pagecategory': 'homepage'
-  });
-</script>
-  
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-M6PPQT44');</script>
-<!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <title> Bienvenue !</title>
   <meta name="description" content="Bienvenue sur ce site d'exercice GTM !"> <!-- Meta Description -->
@@ -26,10 +11,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 
    <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M6PPQT44"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
   <div class="container">
     <div class="main">
       <div class="header">
@@ -40,7 +22,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <p> Tu trouveras ci-dessous la liste vers les différentes pages du site :</p> 
     
   <p><a href="https://arthurseche.github.io/eleve8/exercice1.html">exercice 1</a> <br>
-  <a  href="https://arthurseche.github.io/eleve8/contact.html" class = "contact" > contact </a> <br>
+  <a  href="https://arthurseche.github.io/eleve8/contact.html"  > contact </a> <br>
     <a href="https://arthurseche.github.io/eleve8/produit.html" > produit </a></p>
     <p><a href="https://arthurseche.github.io/eleve8/exercice2.html"> exercice 2 </a> <br>
     <p><a href="https://arthurseche.github.io/eleve8/examen.html"> examen </a> <br>
